--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
 
 
         <div class="container marketing">
-
             <!-- Three columns of text below the carousel -->
             <div class="row">
                 <div class="col-lg-4">
@@ -106,12 +105,11 @@
 
             <div class="row featurette">
                 <div class="col-md-7">
-                    <h2 class="featurette-heading fw-normal lh-1">How does Real Enquiries manage <span
-                            class="text-body-secondary">high volumes of
-                            enquiries?</span></h2>
-                    <p class="lead">Real Enquiries is designed to handle a high volume of enquiries efficiently. Through
-                        our integration with Daft, we collect and organize the enquiries into clients, properties, and
-                        more. This allows you to manage enquiries easily and maintain a streamlined workflow.</p>
+                    <h2 class="featurette-heading fw-normal lh-1">Manage Enquiries <span
+                            class="text-body-secondary">Effortlessly</span></h2>
+                    <p class="lead">Real Enquiries integrates directly with Daft, Ireland's top property advertising
+                        platform. This means you get all your enquiries funneled into one place, systematically
+                        organized for your convenience.</p>
                 </div>
                 <div class="col-md-5">
                 </div>
@@ -121,13 +119,11 @@
 
             <div class="row featurette">
                 <div class="col-md-7 order-md-2">
-                    <h2 class="featurette-heading fw-normal lh-1">How does the <span
-                            class="text-body-secondary">Application HUB</span> work?
-                    </h2>
-                    <p class="lead">Our modern Application HUB provides a platform for potential tenants to create an
-                        account, upload their profile and documents, and provide information about other occupants or
-                        guarantors. It also enables them to track their application status in real time, offering a
-                        user-friendly, intuitive experience.</p>
+                    <h2 class="featurette-heading fw-normal lh-1"><span class="text-body-secondary">Tenant
+                            Application</span> Made Easy</h2>
+                    <p class="lead">Tenants can use our modern Application HUB to create an account, upload their
+                        personal documents, and keep track of their application's status in real time. It’s a
+                        game-changer for the tenant application experience.</p>
                 </div>
                 <div class="col-md-5 order-md-1">
                 </div>
@@ -152,11 +148,10 @@
 
             <div class="row featurette">
                 <div class="col-md-7 order-md-2">
-                    <h2 class="featurette-heading fw-normal lh-1">What benefits does the <span
-                            class="text-body-secondary">DocuSign</span> integration provide?</h2>
-                    <p class="lead">With DocuSign integration, you can seamlessly generate leases, licenses, and
-                        addendums and send them for electronic signatures. This significantly speeds up the process,
-                        eliminates the need for physical paperwork, and ensures a smooth transition for your tenants.
+                    <h2 class="featurette-heading fw-normal lh-1"><span class="text-body-secondary">Streamline</span>
+                        Documents Management on <span class="text-body-secondary">DocuSign</span></h2>
+                    <p class="lead">With our DocuSign integration, you can generate and send necessary documents like
+                        leases, licenses, and addendums with just a few clicks, streamlining the whole process.
                     </p>
                 </div>
                 <div class="col-md-5">
@@ -164,20 +159,21 @@
             </div>
 
             <hr class="featurette-divider">
-
             <div class="row featurette">
                 <div class="col-md-7">
-                    <h2 class="featurette-heading fw-normal lh-1">What benefits does the <span
-                            class="text-body-secondary">Re-Leased</span> integration provide?</h2>
-                    <p class="lead">With Re-Leased integration, you can seamlessly link the properties in your Real
-                        Enquiries account to your Re-Leased account. This allows you to easily manage your properties
-                        and tenancies in Re-Leased, while also managing the enquiries and applications in Real
-                        Enquiries.</p>
+                    <h2 class="featurette-heading fw-normal lh-1">Unlock Efficiencies with <span
+                            class="text-body-secondary">Re-Leased Integration</span></h2>
+                    <p class="lead">
+                        Integrate your Real Enquiries and Re-Leased accounts for a streamlined property management
+                        experience. By linking the two platforms, you can manage your properties and tenancies in
+                        Re-Leased while
+                        handling enquiries and applications in Real Enquiries.
                     </p>
                 </div>
                 <div class="col-md-5">
                 </div>
             </div>
+
 
             <hr class="featurette-divider">
 
@@ -210,6 +206,7 @@
             <!-- /END THE FEATURETTES -->
         </div>
 
+
         <h1 class="visually-hidden">Heroes</h1>
 
         <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
@@ -224,7 +221,6 @@
                     </a>
                 </div>
             </div>
-        </div>
         </div>
 
         <div class="container mt-5 mb-5">
