--- a/index.html
+++ b/index.html
@@ -151,8 +151,7 @@
                             </span>
                         </div>
                         <h4 class="mt-3">Manage applications and send necessary documents</h4>
-                        <p class="text-muted mt-2 mb-0">Our top-notch security features protect your data and ensure
-                            compliance.</p>
+                        <p class="text-muted mt-2 mb-0">Review and set outcomes, follow-up and create documents based on templates effortlessly.</p>
                     </div>
                 </div>
 
